--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#contact">Contact Us</a></li>
-              <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+              <!-- <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li> -->
             </ul>
           </div>
         </div>
@@ -97,7 +97,7 @@
             <div class="progress">
                 <div class="determinate blue" style="width: 85%"></div>
             </div>
-            <p>GAME DEVELOPMENT</p>
+            <p>GRAPHIC DESIGNERT</p>
             <div class="progress">
                 <div class="determinate blue" style="width: 90%"></div>
             </div>
@@ -112,7 +112,7 @@
       <div class="parallax"><img src="img/slider/4.png"></div>
 
       <div class="container clients">
-        <h3 class="center light white-text">Our Clients</h3>
+        <h3 class="center light white-text">Alumni</h3>
         <div class="row">
           <div class="col m4 s12 center">
             <img src="img/clients/gojek.png">
@@ -150,7 +150,7 @@
           <div class="col m4 s12">
             <div class="card-panel center">
               <i class="material-icons medium">games</i>
-              <h5>Game Development</h5>
+              <h5>Graphic Designer</h5>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, quibusdam.</p>
             </div>
           </div>
@@ -204,13 +204,11 @@
             <div class="card-panel blue darken-2 center white-text">
               <i class="material-icons">email</i>
               <h5>Contact</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, perspiciatis.</p>
+              <p>Aditya Saputra, adityasa982@gmail.com.</p>
             </div>
             <ul class="collection with-header">
               <li class="collection-header"><h4>Our Office</h4></li>
-              <li class="collection-item">Web Programming UNPAS</li>
-              <li class="collection-item">Jl. Setiabudhi No. 193, Bandung</li>
-              <li class="collection-item">West Java, Indonesia</li>
+              <li class="collection-item">Any where</li>
             </ul>
           </div>
 
