--- a/index.html
+++ b/index.html
@@ -137,21 +137,21 @@
             <div class="card-panel center">
               <i class="material-icons medium">desktop_windows</i>
               <h5>Web Development</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, quibusdam.</p>
+              <p>Saya menguasai HTML, CSS, JS, PHP, BOOTSTRAP, SPRINGBOOT, REST API.</p>
             </div>
           </div>
           <div class="col m4 s12">
             <div class="card-panel center">
               <i class="material-icons medium">developer_mode</i>
               <h5>Mobile App</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, quibusdam.</p>
+              <p>Flutter, and React Native.</p>
             </div>
           </div>
           <div class="col m4 s12">
             <div class="card-panel center">
               <i class="material-icons medium">games</i>
               <h5>Graphic Designer</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, quibusdam.</p>
+              <p>Photoshop, Adobe XD, CorelDrawn, Illustrator.</p>
             </div>
           </div>
         </div>
