--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <img src="img/slider/3.png">
           <div class="caption center-align">
             <h3>This is my Portofolio!</h3>
-            <h5 class="light grey-text text-lighten-3">Enjoy and Keep smile.</h5>
+            <h5 class="light grey-text text-lighten-3">Enjoy ...</h5>
           </div>
         </li>
       </ul>
@@ -112,7 +112,7 @@
       <div class="parallax"><img src="img/slider/4.png"></div>
 
       <div class="container clients">
-        <h3 class="center light white-text">Alumni</h3>
+        <h3 class="center light white-text">my alma mater</h3>
         <div class="row">
           <div class="col m4 s12 center">
             <img src="img/clients/gojek.png">
@@ -137,7 +137,7 @@
             <div class="card-panel center">
               <i class="material-icons medium">desktop_windows</i>
               <h5>Web Development</h5>
-              <p>Saya menguasai HTML, CSS, JS, PHP, BOOTSTRAP, SPRINGBOOT, REST API.</p>
+              <p> HTML, CSS, JS, PHP, BOOTSTRAP, SPRINGBOOT, REST API.</p>
             </div>
           </div>
           <div class="col m4 s12">
@@ -204,7 +204,10 @@
             <div class="card-panel blue darken-2 center white-text">
               <i class="material-icons">email</i>
               <h5>Contact</h5>
-              <p>Aditya Saputra, adityasa982@gmail.com.</p>
+              <p>Email      : adityasa982@gmail.com.</p>
+              <p>Whatsapp   : 0898 2023 313.</p>
+              <p>Linkedin   : <a href="https://www.linkedin.com/in/aditya-saputra-6a847b170/">Aditya Saputra</a></p>
+              <p>Instragram : <a href="https://www.instagram.com/didit_today/?hl=id">@didit_today</a></p>
             </div>
             <ul class="collection with-header">
               <li class="collection-header"><h4>Our Office</h4></li>
@@ -243,7 +246,7 @@
 
     <!-- footer -->
     <footer class="blue darken-2 white-text center">
-      <p class="flow-text">Aditya Saputra. Copyright 2020.</p>
+      <p class="flow-text">Copyright 2020 - Aditya Saputra. </p>
     </footer>
 
 
