--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <h3 class="center light grey-text text-darken-3">About Us</h3>
           <div class="col m6 light">
             <h5>We Are Professionals</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi quo accusantium repellat similique ipsa doloribus in aliquam earum eaque, possimus necessitatibus sunt repellendus ullam recusandae voluptas dolore debitis saepe facere.</p>
+            <p>The one who affect the successfully of my customer business.</p>
           </div>
           <div class="col m6 light">
             <p>WEB DEVELOPMENT</p>
