--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="progress">
                 <div class="determinate blue" style="width: 85%"></div>
             </div>
-            <p>GRAPHIC DESIGNERT</p>
+            <p>GRAPHIC DESIGNER</p>
             <div class="progress">
                 <div class="determinate blue" style="width: 90%"></div>
             </div>
